--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <appengine.version>1-lizzy</appengine.version>
   </properties>
 
   <dependencies>
