--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -93,7 +93,7 @@
   
   <servlet-mapping>
       <servlet-name>MailServlet</servlet-name>
-      <url-pattern>/mail</url-pattern>
+      <url-pattern>/mail/*</url-pattern>
   </servlet-mapping>
 
 </web-app>
